--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -159,8 +159,32 @@ img {
 }
 
 /*=============== HEADER & NAV===============*/
-
-
+.header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--body-color);
+  z-index: var(--z-fixed);
+}
+.nav{
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav__logo{
+  color: var(--first-color);
+  font-weight: var(--font-medium);
+  transition: 4s;
+}
+.nav__logo:hover{
+  color: var(--first-color);
+}
+.nav__menu{
+  position: fixed;
+  bottom: 1rem;
+}
 /* Active link */
 
 
