--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,7 @@
   --first-hue: 250;
   --sat: 66%;
   --lig: 75%;
-  --second-hue: 219;
+  --second-hue: 260;  /* 219*/
   --first-color: hsl(var(--first-hue), var(--sat), var(--lig));
   --first-color-alt: hsl(var(--first-hue), var(--sat), 71%); /* -4% */
   --title-color: hsl(var(--second-hue), 15%, 95%);
@@ -184,9 +184,33 @@ img {
 .nav__menu{
   position: fixed;
   bottom: 1rem;
+  background-color: hsla(var(--second-hue), 32%, 16%, 80%);
+  width: 90%;
+  border-radius: 4rem;
+  padding: 1rem 2.5rem;
+  backdrop-filter: blur(10px);
+}
+.nav__list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav__link{
+  color: var(--text-color);
+  font-size: 1.25rem;
+  padding: .4rem;
+  display: flex;
+  border-radius: 5rem;
+
 }
 /* Active link */
-
+.active-link{
+  background: linear-gradient(180deg, 
+              hsla(var(--first-hue), var(--sat), var(--lig), 1),
+              hsla(var(--first-hue), var(--sat), var(--lig), .2)
+              );
+  box-shadow: 0 0 16px hsla(var(--first-hue), var(--sat), var(--lig), .4);
+}
 
 /* Change background header */
 
