--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,7 +128,7 @@ img {
   margin-right: 1rem;
 }
 
-.grid {
+.grid{
   display: grid;
   gap: 1.25rem;
 }
@@ -222,7 +222,7 @@ img {
   row-gap: 4.5rem;
   padding-top: 2rem;
 }
-
+ 
 .home__data{
   text-align: center;
 }
@@ -245,18 +245,19 @@ img {
 }
 
 .home__img{
-  width: 160px;
+  width: 190px;
+  opacity: 0.70; /*Quitar en cuanto la foto no tenga fondo*/
 }
 
 .home__handle{
   justify-self: center;
   width: 190px;
-  height: 293px;
+  height: 190px; /*293px*/
   background: linear-gradient(180deg, 
-              hsla(var(--first-hue), var(--sat), var(--lig), 1)
+              hsla(var(--first-hue), var(--sat), var(--lig), 1),
               hsla(var(--first-hue), var(--sat), var(--lig), 0.25)
               );
-  border-radius:  10rem, 10rem, 1rem, 1rem;
+  border-radius:  10rem 10rem 1rem 1rem;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -321,7 +322,7 @@ img {
 .home__scroll-name{
   font-size: var(--small-font-size);
   transform: rotate(-90deg);
-}
+} 
 
 /*=============== BUTTONS ===============*/
 
