--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -220,7 +220,7 @@ img {
 .home__container{
   position: relative;
   row-gap: 4.5rem;
-  padding-top: 2rem;
+  padding-top: 2.5rem;
 }
  
 .home__data{
@@ -238,7 +238,7 @@ img {
 
 .home__education{
   color: var(--text-color);
-  margin-bottom: .25rem;
+  margin-bottom: 2.5rem;
 }
 .home__name{
   font-size: var(--biggest-font-size);
@@ -276,7 +276,7 @@ img {
 }
 
 .home__social{
-  bottom: 5rem;
+  bottom: 2rem; /*5rem*/
   left: 0;
   display: grid;
   row-gap: .5rem;
@@ -300,7 +300,7 @@ img {
 
 .home__social::after{
   content: "";
-  width: 32px;
+  width: 30px;
   height: 2px;
   background-color: var(--first-color);
   transform: rotate(90deg) translate(16px, 3px);
@@ -325,11 +325,72 @@ img {
 } 
 
 /*=============== BUTTONS ===============*/
+.button{
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--body-color);
+  padding: .75rem 1rem;
+  border-radius: .5rem;
+  font-weight: var(--font-medium);
+  transition: .4s;
+}
 
+.button:hover{
+  background-color: var(--first-color-alt);
+  color: var(--body-color);
+}
+
+.button--ghost{
+  background-color: transparent;
+  border: 2px solid var(--first-color);
+  color: var(--first-color);
+}
 
 /*=============== ABOUT ===============*/
+.about__container{
+  row-gap: 2.5rem;
+}
 
+.about__img{
+  width: 220px;
+  border-radius: 1.5rem;
+  justify-self: center;
+}
 
+.about__data{
+  text-align: center;
+}
+
+.about__info{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: .5rem;
+  margin-bottom: 2rem;
+}
+
+.about__box{
+  background-color: var(--container-color);
+  border-radius: .75rem;
+  padding: .75rem .5rem;
+}
+
+.about__icon{
+  font-size: 1.5rem;
+  color: var(--first-color);
+  margin-bottom: .5rem;
+}
+
+.about__title{
+  font-size: var(--small-font-size);
+}
+
+.about__subtitle{
+  font-size: var(--tiny-font-size);
+}
+
+.about__desciption{
+  margin-bottom: 2rem;
+}
 /*=============== SKILLS ===============*/
 
 
