--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -128,7 +128,7 @@ img {
   margin-right: 1rem;
 }
 
-.grid {
+.grid{
   display: grid;
   gap: 1.25rem;
 }
@@ -220,9 +220,9 @@ img {
 .home__container{
   position: relative;
   row-gap: 4.5rem;
-  padding-top: 2rem;
+  padding-top: 2.5rem;
 }
-
+ 
 .home__data{
   text-align: center;
 }
@@ -238,25 +238,26 @@ img {
 
 .home__education{
   color: var(--text-color);
-  margin-bottom: .25rem;
+  margin-bottom: 2.5rem;
 }
 .home__name{
   font-size: var(--biggest-font-size);
 }
 
 .home__img{
-  width: 160px;
+  width: 190px;
+  opacity: 0.70; /*Quitar en cuanto la foto no tenga fondo*/
 }
 
 .home__handle{
   justify-self: center;
   width: 190px;
-  height: 293px;
+  height: 190px; /*293px*/
   background: linear-gradient(180deg, 
-              hsla(var(--first-hue), var(--sat), var(--lig), 1)
+              hsla(var(--first-hue), var(--sat), var(--lig), 1),
               hsla(var(--first-hue), var(--sat), var(--lig), 0.25)
               );
-  border-radius:  10rem, 10rem, 1rem, 1rem;
+  border-radius:  10rem 10rem 1rem 1rem;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -275,7 +276,7 @@ img {
 }
 
 .home__social{
-  bottom: 5rem;
+  bottom: 2rem; /*5rem*/
   left: 0;
   display: grid;
   row-gap: .5rem;
@@ -299,7 +300,7 @@ img {
 
 .home__social::after{
   content: "";
-  width: 32px;
+  width: 30px;
   height: 2px;
   background-color: var(--first-color);
   transform: rotate(90deg) translate(16px, 3px);
@@ -321,14 +322,77 @@ img {
 .home__scroll-name{
   font-size: var(--small-font-size);
   transform: rotate(-90deg);
-}
+} 
 
 /*=============== BUTTONS ===============*/
+.button{
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--body-color);
+  padding: .75rem 1rem;
+  border-radius: .5rem;
+  font-weight: var(--font-medium);
+  transition: .4s;
+}
 
+.button:hover{
+  background-color: var(--first-color-alt);
+  color: var(--body-color);
+}
+
+.button--ghost{
+  background-color: transparent;
+  border: 2px solid var(--first-color);
+  color: var(--first-color);
+}
 
 /*=============== ABOUT ===============*/
+.about__container{
+  row-gap: 2.5rem;
+}
 
+.about__img{
+  width: 230px;
+  height: 280PX;
+  object-fit: cover;
+  border-radius: 1.5rem;
+  justify-self: center;
+}
 
+.about__data{
+  text-align: center;
+}
+
+.about__info{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: .5rem;
+  margin-bottom: 2rem;
+}
+
+.about__box{
+  background-color: var(--container-color);
+  border-radius: .75rem;
+  padding: .75rem .5rem;
+}
+
+.about__icon{
+  font-size: 1.5rem;
+  color: var(--first-color);
+  margin-bottom: .5rem;
+}
+
+.about__title{
+  font-size: var(--small-font-size);
+}
+
+.about__subtitle{
+  font-size: var(--tiny-font-size);
+}
+
+.about__desciption{
+  margin-bottom: 2rem;
+}
 /*=============== SKILLS ===============*/
 
 
